--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-size: 20px;
 }
 
 form {
@@ -12,19 +13,25 @@ form {
   justify-content: center;
   align-items: center;
   gap: 5px;
+  margin: 10px;
 }
 
 form textarea {
   width: 100%;
   padding: 15px;
+  font-size: 20px;
 }
 
-p {
+#translationPara {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 80%;
-  color: darkblue;
   border: 1px solid #ccc;
   padding: 15px;
-  display: flex;
-  align-items: center;
-  justify-content: left;
+}
+
+#translationPara h1 {
+  margin: 0;
 }
