--- a/style.css
+++ b/style.css
@@ -6,32 +6,28 @@ body {
   font-size: 20px;
 }
 
-form {
+.card {
+  width: 100vw;
   display: flex;
   flex-direction: column;
-  width: 80%;
-  justify-content: center;
   align-items: center;
-  gap: 5px;
-  margin: 10px;
+  margin: 25px auto;
 }
 
-form textarea {
-  width: 100%;
-  padding: 15px;
-  font-size: 20px;
-}
-
-#translationPara {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 80%;
-  border: 1px solid #ccc;
-  padding: 15px;
-}
-
-#translationPara h1 {
+h1 {
   margin: 0;
+}
+
+.area {
+  border: 1px solid black;
+  width: 80vw;
+  padding: 15px;
+}
+
+.original-text {
+  color: red;
+}
+
+.translated-text {
+  color: blue;
 }
