--- a/style.css
+++ b/style.css
@@ -1,22 +1,64 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100..900&family=Noto+Sans+TC:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+:root {
+  --milky: #F5F7FA;
+  --light-blue: #4EA5FF;
+  --dark-blue: #207BFF;
+  --tc-font: "Noto Sans TC", sans-serif;
+  --sc-font: "Noto Sans SC", sans-serif;
+  --en-font: "Noto Sans", sans-serif;
+  --space-big: 15px;
+  --space-small: 5px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.noto-sans {
+  font-family: "Noto Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+
+.noto-sans-sc {
+  font-family: "Noto Sans SC", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.noto-sans-tc {
+  font-family: "Noto Sans TC", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
 body {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   font-size: 20px;
+  font-family: var(--tc-font), var(--sc-font), var(--en-font);
 }
 
 header {
   width: 50vw;
-  background-color: skyblue;
-  padding: 15px;
+  color: var(--dark-blue);
+  padding: var(--space-big)
 }
+
 .card {
   width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 25px auto;
+  margin: var(--space-big) auto;
 }
 
 h1 {
@@ -26,7 +68,7 @@ h1 {
 .area {
   border: 1px solid #ccc;
   width: 80vw;
-  padding: 15px;
+  padding: var(--space-big);
 }
 
 .original-text {
@@ -34,7 +76,7 @@ h1 {
 }
 
 .translated-text {
-  color: blue;
+  color: var(--dark-blue);
 }
 
 .translate-error {
@@ -44,17 +86,21 @@ h1 {
 #notesArea {
   display: grid;
   grid-template-columns: repeat(auto-fill, 150px);
-  grid-gap: 10px;
+  grid-gap: var(--space-big);
   justify-content: start;
 }
 
 .note {
+  margin: 0;
   border: 1px solid #ccc;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+  padding: var(--space-small);
+  font-size: 15px;
 }
 
-#originalHint {
+.hintBox {
   display: none;
   width: 80vw;
-  background-color: skyblue;
+  background-color: var(--milky);
+  font-size: 14px;
 }
