--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ h1 {
   justify-content: start;
 }
 
-.note {
+#notesArea div, .note {
   margin: 0;
   border: 1px solid #ccc;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
